--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,18 +1,25 @@
 header {
-  padding: 20px 30px;
+  padding: rem(20px) rem(30px);
   display: flex;
-  background: #0548be;
+  background:$blue;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (max-width: $tablets){
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+}
 }
 
 .title-text {
   color: #fff;
-  font-size: 28px;
+  font-size: rem(28px);
 }
 
 .return-back {
-  font-size: 16px;
+  font-size: rem(16px);
   color: #fff;
 
   &:hover {
