--- a/src/components/Works/style.scss
+++ b/src/components/Works/style.scss
@@ -5,7 +5,7 @@
 }
 
 .upload__text {
-  color: rgba(#0548be, 0.7);
+  color: rgba($blue, 0.7);
   margin-top: -8px;
 }
 
@@ -14,17 +14,17 @@
 }
 
 .upload__icon {
-  background: svg('~img/icons/upload.svg', '#fff') center center no-repeat;
-  width: 35px;
-  height: 34px;
+  background: svg('~img/icons/image-pic.svg', '$blue') center center no-repeat;
+  width: rem(35px);
+  height: rem(34px);
 }
 
 .row {
-  margin-bottom: 20px;
+  margin-bottom: rem(20px);
 }
 
 .form-title {
-  margin-bottom: 20px;
+  margin-bottom: rem(20px);
 }
 
 .error-message {
