--- a/src/components/_common/Button/style.scss
+++ b/src/components/_common/Button/style.scss
@@ -1,17 +1,17 @@
-button{
-    padding: 16px 20px;
-    border-radius: 5px;
-    background-color: #0548be;
-    color:#fff;
-    border:none;
-    cursor:pointer;
+button {
+  padding: 16px 20px;
+  border-radius: 5px;
+  background-color: $blue;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  
+  &:hover {
+    background-color: darken($blue, 10%);
+  }
 
-    &:hover{
-        background-color: darken(#0548be,10%)
-    }
-
-    &[disabled]{
-        cursor: default;
-        background: #ccc;
-    }
+  &[disabled] {
+    cursor: default;
+    background: #ccc;
+  }
 }
